// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioField should render correctly 1`] = `
<DocumentFragment>
  .cache-1kn6zz7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1kn6zz7[aria-disabled='false'],
.cache-1kn6zz7[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  fill: #521094;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #e5dbfd;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  fill: #b3144d;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffd3e3;
}

.cache-1kn6zz7[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-1kn6zz7[aria-disabled='true']>label,
.cache-1kn6zz7[aria-disabled='true'] .ehkrmld1 {
  cursor: not-allowed;
}

.cache-1kn6zz7[aria-disabled='true'] .ehkrmld2 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-1kn6zz7[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-1beq7ey {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1beq7ey+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1beq7ey:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1beq7ey:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-1beq7ey[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #e51963;
}

.cache-1beq7ey:focus+.ehkrmld2 {
  background-color: #5e127e40;
  fill: #521094;
}

.cache-1beq7ey:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-68yjjn {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-68yjjn .ehkrmld4 {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-1kn6zz7 ehkrmld0"
      data-checked="false"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-1beq7ey ehkrmld1"
        id="test-test"
        name="test"
        type="radio"
        value="test"
      />
      <svg
        class="cache-68yjjn ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="10"
            stroke-width="2"
          />
          <circle
            class="cache-0 ehkrmld4"
            cx="12"
            cy="12"
            r="8"
          />
          <circle
            class="cache-0 ehkrmld3"
            cx="12"
            cy="12"
            r="5"
          />
        </g>
      </svg>
      <label
        for="test-test"
      >
        Radio field
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-1kn6zz7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1kn6zz7[aria-disabled='false'],
.cache-1kn6zz7[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  fill: #521094;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #e5dbfd;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  fill: #b3144d;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffd3e3;
}

.cache-1kn6zz7[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-1kn6zz7[aria-disabled='true']>label,
.cache-1kn6zz7[aria-disabled='true'] .ehkrmld1 {
  cursor: not-allowed;
}

.cache-1kn6zz7[aria-disabled='true'] .ehkrmld2 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-1kn6zz7[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-1beq7ey {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1beq7ey+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1beq7ey:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1beq7ey:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-1beq7ey[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #e51963;
}

.cache-1beq7ey:focus+.ehkrmld2 {
  background-color: #5e127e40;
  fill: #521094;
}

.cache-1beq7ey:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-68yjjn {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-68yjjn .ehkrmld4 {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-1kn6zz7 ehkrmld0"
      data-checked="true"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        checked=""
        class="cache-1beq7ey ehkrmld1"
        id="test-checked"
        name="test"
        type="radio"
        value="checked"
      />
      <svg
        class="cache-68yjjn ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="10"
            stroke-width="2"
          />
          <circle
            class="cache-0 ehkrmld4"
            cx="12"
            cy="12"
            r="8"
          />
          <circle
            class="cache-0 ehkrmld3"
            cx="12"
            cy="12"
            r="5"
          />
        </g>
      </svg>
      <label
        for="test-checked"
      >
        Radio field checked
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-1kn6zz7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1kn6zz7[aria-disabled='false'],
.cache-1kn6zz7[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  fill: #521094;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #e5dbfd;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  fill: #b3144d;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffd3e3;
}

.cache-1kn6zz7[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-1kn6zz7[aria-disabled='true']>label,
.cache-1kn6zz7[aria-disabled='true'] .ehkrmld1 {
  cursor: not-allowed;
}

.cache-1kn6zz7[aria-disabled='true'] .ehkrmld2 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-1kn6zz7[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-1beq7ey {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1beq7ey+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1beq7ey:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1beq7ey:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-1beq7ey[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #e51963;
}

.cache-1beq7ey:focus+.ehkrmld2 {
  background-color: #5e127e40;
  fill: #521094;
}

.cache-1beq7ey:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-68yjjn {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-68yjjn .ehkrmld4 {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="true"
      class="cache-1kn6zz7 ehkrmld0"
      data-checked="false"
    >
      <input
        aria-disabled="true"
        aria-invalid="false"
        class="cache-1beq7ey ehkrmld1"
        disabled=""
        id="test-disabled"
        name="test"
        type="radio"
        value="disabled"
      />
      <svg
        class="cache-68yjjn ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="10"
            stroke-width="2"
          />
          <circle
            class="cache-0 ehkrmld4"
            cx="12"
            cy="12"
            r="8"
          />
          <circle
            class="cache-0 ehkrmld3"
            cx="12"
            cy="12"
            r="5"
          />
        </g>
      </svg>
      <label
        for="test-disabled"
      >
        Radio field disabled
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`RadioField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-1kn6zz7 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-1kn6zz7[aria-disabled='false'],
.cache-1kn6zz7[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  fill: #521094;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #e5dbfd;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  fill: #b3144d;
}

.cache-1kn6zz7:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #ffd3e3;
}

.cache-1kn6zz7[aria-disabled='true'] {
  cursor: not-allowed;
}

.cache-1kn6zz7[aria-disabled='true']>label,
.cache-1kn6zz7[aria-disabled='true'] .ehkrmld1 {
  cursor: not-allowed;
}

.cache-1kn6zz7[aria-disabled='true'] .ehkrmld2 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.cache-1kn6zz7[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #f3f3f4;
}

.cache-1beq7ey {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-1beq7ey+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1beq7ey:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-1beq7ey:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-1beq7ey[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #e51963;
}

.cache-1beq7ey:focus+.ehkrmld2 {
  background-color: #5e127e40;
  fill: #521094;
}

.cache-1beq7ey:focus+.ehkrmld2 .ehkrmld4 {
  fill: #f1eefc;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.cache-1beq7ey[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ffebf2;
}

.cache-68yjjn {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #d9dadd;
}

.cache-68yjjn .ehkrmld4 {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-1kn6zz7 ehkrmld0"
      data-checked="true"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-1beq7ey ehkrmld1"
        id="test-events"
        name="test"
        type="radio"
        value="events"
      />
      <svg
        class="cache-68yjjn ehkrmld2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="10"
            stroke-width="2"
          />
          <circle
            class="cache-0 ehkrmld4"
            cx="12"
            cy="12"
            r="8"
          />
          <circle
            class="cache-0 ehkrmld3"
            cx="12"
            cy="12"
            r="5"
          />
        </g>
      </svg>
      <label
        for="test-events"
      >
        Radio field events
      </label>
    </div>
  </form>
</DocumentFragment>
`;
